k8s/acpr-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acpr-deployment
  labels:
    app: acpr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: acpr
  template:
    metadata:
      labels:
        app: acpr
    spec:
      containers:
      - name: acpr-frontend
        image: cooperaj/acpr:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
