k8s/acpr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: acpr-service
spec:
  ports:
  - name: http
    targetPort: 5000
    port: 80
  selector:
    app: acpr
