k8s/acpr-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: acpr-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - acpr.dev
  secretName: acpr-dev-tls
  rules:
  - host: acpr.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: acpr-service
          servicePort: http
